# portable

./: .env.example  alembic.ini  main.py  pyproject.toml
src/: runner.py
src/api/: __init__.py  _api.py  dependencies.py
src/api/routers/: __init__.py  _subscription.py  _telegram.py
src/clients/: __init__.py  _manager.py
src/clients/core/: __init__.py  _client.py  _requset.py
src/clients/marzban/: __init__.py  _client.py  _models.py
src/clients/marzneshin/: __init__.py  _client.py  _models.py
src/config/: __init__.py  _bot.py  _env.py
src/db/: __init__.py  core.py
src/db/migrations/: env.py
src/db/migrations/versions/: 20250615.py  20250616.py  20250616_533a9c913d3e.py  20250616_8d00a371f707.py
src/db/models/: __init__.py  _server.py  _subscription.py  _user.py
src/handlers/: __init__.py  _fallback.py
src/handlers/admin/: __init__.py  _commands.py  _middlewares.py
src/handlers/admin/servers/: __init__.py  _create.py  _info.py  _menu.py  _update.py
src/handlers/admin/subscriptions/: __init__.py  _info.py  _menu.py  _operation.py
src/keys/admin/: __init__.py  _callback.py  _manager.py
src/language/: __init__.py  _key.py  _mes.py
src/utils/: __init__.py  _datetime.py  _exceptions.py  transfer.py
