[project]
name = "portable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "alembic>=1.16.1",
    "dotenv>=0.9.9",
    "eiogram==1.3.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
